error404: improved the message.

--- a/error404.html
+++ b/error404.html
@@ -3,9 +3,13 @@
 <body>
 
 <font size="+2">
-<b>404 - Page not found.</b>
+<b>Page not found.</b>
+</font>
+<font size="+1">
 <p>
-You may find what you are looking for at <a href="https://www.about-quantum.com">www.about-quantum.com</a>.
+The requested address may be incorrectly spelled or the page may have been removed.
+<p>
+Back to the <a href="https://www.about-quantum.com">home page</a>.
 </font>
 
 </body>
